RESOLVED FIXED73713
[GTK] TextureMapperNode should not use Qt types and functions
https://bugs.webkit.org/show_bug.cgi?id=73713
Summary [GTK] TextureMapperNode should not use Qt types and functions
Alejandro G. Castro
Reported 2011-12-02 16:01:22 PST
Currently it is using qreal and qMin.
Attachments
Proposed patch (2.48 KB, patch)
2011-12-02 16:03 PST, Alejandro G. Castro
noam: review+
Alejandro G. Castro
Comment 1 2011-12-02 16:03:21 PST
Created attachment 117709 [details] Proposed patch
Martin Robinson
Comment 2 2011-12-02 16:51:27 PST
Comment on attachment 117709 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=117709&action=review > Source/WebCore/platform/graphics/texmap/TextureMapperNode.cpp:835 > + return std::min(1.0, (floor(numSteps * t) + 1) / numSteps); I'm not certain, but I think its more typical to include MathExtras.h here and just use min.
Noam Rosenthal
Comment 3 2011-12-02 18:17:47 PST
Comment on attachment 117709 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=117709&action=review >> Source/WebCore/platform/graphics/texmap/TextureMapperNode.cpp:835 >> + return std::min(1.0, (floor(numSteps * t) + 1) / numSteps); > > I'm not certain, but I think its more typical to include MathExtras.h here and just use min. True. Please fix before committing :)
Alejandro G. Castro
Comment 4 2011-12-03 01:39:27 PST
I've talked to Martin we checked that min is not directly included by MathExtras, he recommended to include it to add Windows support and use std:min.
Alejandro G. Castro
Comment 5 2011-12-03 02:09:45 PST
Note You need to log in before you can comment on or make changes to this bug.