2011-12-03  Alejandro G. Castro  <alex@igalia.com>

[GTK] TextureMapperNode should not use Qt types and functions
        https://bugs.webkit.org/show_bug.cgi?id=73713

        Replace qreal with double and qMin with min.

        Reviewed by Noam Rosenthal.

        * platform/graphics/texmap/TextureMapperNode.cpp:
        (WebCore::solveCubicBezierFunction):
        (WebCore::solveStepsFunction):

Canonical link: https://commits.webkit.org/90382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101919 268f45cc-cd09-0410-ab3c-d52691b4dbfc