Source/WebCore/platform/graphics/texmap/TextureMapperNode.cpp
@@ -23,6 +23,7 @@
 #if USE(ACCELERATED_COMPOSITING)
 
 #include "GraphicsLayerTextureMapper.h"
+#include "MathExtras.h"
 
 namespace {
     static const float gTileDimension = 1024.0;
@@ -823,7 +824,7 @@ static inline double solveEpsilon(double duration)
     return 1.0 / (200.0 * duration);
 }
 
-static inline double solveCubicBezierFunction(qreal p1x, qreal p1y, qreal p2x, qreal p2y, double t, double duration)
+static inline double solveCubicBezierFunction(double p1x, double p1y, double p2x, double p2y, double t, double duration)
 {
     UnitBezier bezier(p1x, p1y, p2x, p2y);
     return bezier.solve(t, solveEpsilon(duration));
@@ -832,7 +833,7 @@ static inline double solveCubicBezierFunction(qreal p1x, qreal p1y, qreal p2x, q
 static inline double solveStepsFunction(int numSteps, bool stepAtStart, double t)
 {
     if (stepAtStart)
-        return qMin(1.0, (floor(numSteps * t) + 1) / numSteps);
+        return std::min(1.0, (floor(numSteps * t) + 1) / numSteps);
     return floor(numSteps * t) / numSteps;
 }
 
